--- a/style.css
+++ b/style.css
@@ -1190,6 +1190,7 @@ body {
     border: #00000000;
     cursor: pointer;
     font-weight: 600;
+    color: #000000;
 
 }
 
@@ -2340,12 +2341,14 @@ canvas {
     .container-unggulan {
         width: 100%;
         height: 700px;
+        padding: 30px 0 100px 0;
     }
 
     .card-unggulan {
         width: 90%;
-        height: 505px;
+        height: auto;
         margin: 0 0 0 0;
+        padding: 90px 0 0 0;
     }
 
     .card-unggulan img {
