--- a/style.css
+++ b/style.css
@@ -495,6 +495,7 @@ body {
     animation-play-state: paused;
 }
 .modal {
+    overflow: hidden;
     display: none;
     position: fixed;
     top: 0;
