--- a/style.css
+++ b/style.css
@@ -450,7 +450,7 @@ body {
     box-shadow: 0 2px 5px rgb(255, 255, 255);
     overflow: hidden;
     margin-top: 130px;
-    margin-left: 410px;
+    margin-left: 550px;
 }
 
 .parallax__title_about {
@@ -2202,7 +2202,7 @@ canvas {
     .blur-card-popup {
         width: 305px;
         height: auto;
-        margin: -45px 0 0 16px;
+        margin: 0 0 0 50px;
         padding: 30px 20px 20px 20px;
     }
 
