--- a/style.css
+++ b/style.css
@@ -2218,7 +2218,7 @@ canvas {
     .blur-card-popup {
         width: 305px;
         height: auto;
-        margin: 0 0 0 30px;
+        margin: 0 0 0 0;
         padding: 30px 20px 20px 20px;
     }
 
