--- a/style.css
+++ b/style.css
@@ -2213,13 +2213,19 @@ canvas {
 
     .popup-profile {
         padding: 80px 0 100px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        overflow-y: auto;
     }
 
     .blur-card-popup {
         width: 305px;
         height: auto;
-        margin: 0 0 0 0;
+        margin: 0 auto;
         padding: 30px 20px 20px 20px;
+        box-sizing: border-box;
     }
 
 
