--- a/style.css
+++ b/style.css
@@ -2213,18 +2213,15 @@ canvas {
 
     .popup-profile {
         padding: 80px 0 100px 0;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
-        overflow-y: auto;
+        
     }
 
     .blur-card-popup {
         width: 305px;
         height: auto;
-        margin: 0 auto;
+        justify-content:center ;
+        margin: 0 0 0 5px;
         padding: 30px 20px 20px 20px;
-        box-sizing: border-box;
     }
 
 
