--- a/style.css
+++ b/style.css
@@ -397,19 +397,17 @@ body {
 }
 
 .popup-profile {
-    display: none;
+    display: none; /* SEMUA ukuran layar awalnya sembunyi */
     position: fixed;
+    inset: 0;
     z-index: 999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    align-items: center;
     justify-content: center;
-    overflow-y: auto; /* biar bisa discroll kalau tinggi */
-    padding: 40px 20px; /* biar ada jarak dari atas/bawah */
+    align-items: center;
+    padding: 0;
+    flex-direction: column;
 }
+
 
 .popup-content-profile {
     background-color: #fff;
@@ -2211,19 +2209,14 @@ canvas {
         font-size: 10px;
     }
 
-    .popup-profile {
-        padding: 80px 0 100px 0;
-        
-    }
-
-    .blur-card-popup {
-        width: 305px;
-        height: auto;
-        justify-content:center ;
-        margin: 0 0 0 10px;
-        padding: 30px 20px 20px 20px;
-    }
-
+        .blur-card-popup {
+          width: 90%;
+          max-width: 320px;
+          padding: 30px 20px;
+          margin: 0 auto; /* untuk center di horizontal */
+        }
+      
+      
 
     .parallax__title_about {
         display: flex;
